test/sematest/invalid/return4.java
class A {
  public A a;
  public int blub;
  public static void main(String[] args) {

  }

  public A bla(A a){
    return;
  }
}